# valaInitDemo

./: GIOSample2.vala  GIOasync.vala  LIBusb.vala  README.md  cubeData.cpp  cubeData2.cpp  cubePoints2.cpp  cubeSet2.cpp  dbus1.vala  dualToaster1.vala  dualToaster2.vala  hello.vala  helloWorld.vala  method1.vala  nested3loop.vala  nested3loop2.vala  readme.txt  sigTest1.vala  test1.vala  thread1.vala  threadsNew.vala  tips1.txt  valaGtk.sh  voltage2.txt  voltage2.vala  wiki4.vala
anjutaExample/: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
anjutaExample/.anjuta/session/: anjuta.session  dock-layout.xml
anjutaExample/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
anjutaExample/src/: Makefile  Makefile.am  Makefile.in  gtk_vala1  gtk_vala1.c  gtk_vala1.vala  gtk_vala1.vala~
anjutaExample/src/.deps/: gtk_vala1.Po
libtest/: hello.vala  readmeMJH.sh  test.c  test.h
